# mcpcpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh
cmake/: cppMcpConfig.cmake.in
docs/: README.md
examples/: CMakeLists.txt  client_example.cpp  dynamic_server.cpp  server_with_tools.cpp  simple_server.cpp  tasks_config.json
include/cppmcp/: dynamic_mcp_server.hpp  mcp_client.hpp  mcp_server.hpp
src/: dynamic_mcp_main.cpp  dynamic_mcp_server.cpp  main.cpp  mcp_client.cpp  mcp_server.cpp  mcp_sse.cpp  test_client.cpp
tests/: CMakeLists.txt  test_client.cpp  test_server.cpp
